[package]
name = "rpu"
version = "0.1.0"
edition = "2021"
authors = ["Markus Moenig"]
description = "A procedural (retro) 3D software renderer and scene definition language"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.31.0"
rayon = "1.5.3"