[package]
name = "rpu"
version = "0.1.0"
edition = "2021"
authors = ["Markus Moenig"]
description = "A procedural (retro) 3D software renderer and scene definition language"
license = "MIT"
repository = "https://github.com/markusmoenig/RPU.git"

[dependencies]
nalgebra = "0.31.0"
nalgebra-glm = "0.17.0"
rayon = "1.5.3"
rhai = { version = "*", features = ["sync", "f32_float", "only_i32"] }
